Cambio de direccionamiento de [200~feat: Fix website functionality and integrate corrections
✅ Updated all image paths to use local assets
✅ Fixed missing clients section with slider
✅ Corrected responsive design issues
✅ Enhanced JavaScript functionality
✅ Improved mobile navigation

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <body>
 
 <div class="social_header_bar">
-  <img src="media/icons/menu/menu_icon.png" alt="" class="btn_menu" id="btn_menu">
+<img src="media/icons/menu/menu_icon.png" alt="Menu" class="btn_menu" id="btn_menu">
 
   <div class="overlay" id="overlay"></div>
 
   <ul class="contact_info" id="inicio">
     <li class="info">
-      <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="" class="info_icon">
-    </li>
+<img src="media/icons/socials_networks/whatsapp_icon.ico" alt="" class="info_icon">
+<img src="media/icons/socials_networks/email_icon.png" alt="" class="info_icon">    </li>
     <li class="info">
       <a href="https://wa.me/+50769838322" class="info_link">(507) 6983-8322</a>
     </li>
@@ -126,7 +126,7 @@
             <h1 class="title">Potencia e Innovación en Electrodomésticos</h1>
             <h2 class="sub_title">Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.</h2>
             <a href="https://wa.me/+50769838322" class="cta">
-                <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="" class="cta_icon">
+                <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="cta_icon">
                 <span class="cta_text">Consigue tu cotización ahora</span>
             </a>
             <img src="media/images/banner/banner_img.png" alt="" class="banner_img">
@@ -148,19 +148,19 @@
             <article class="products_container">
                 <ul class="products">
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha1.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha1.png" alt="Plancha a vapor" class="product_img">
                         <h2 class="product_name">Plancha a vapor</h2>
                         <p class="product_description">110V - 1200W | BLANCO/AZUL</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha2.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha2.png" alt="Plancha a vapor" class="product_img">
                         <h2 class="product_name">Plancha a vapor</h2>
                         <p class="product_description">1400W - 170ML | BLANCO/AZUL</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha3.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha3.png" alt="Plancha en seco" class="product_img">
                         <h2 class="product_name">Plancha en seco</h2>
                         <p class="product_description">110V - 1200W | BLANCO/MORADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -172,19 +172,19 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_vidrio_negro.png" alt="Licuadora" class="product_img">
                         <h2 class="product_name">Licuadora</h2>
                         <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_blanco.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_vidrio_blanco.png" alt="Licuadora" class="product_img">
                         <h2 class="product_name">Licuadora</h2>
                         <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L BLANCO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_plastico_negro.png" alt="Licuadora 2 en 1" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -220,13 +220,13 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="toaster">
-                        <img src="media/images/products/tostadora.png" alt="" class="product_img">
+                        <img src="media/images/products/tostadora.png" alt="Tostadora" class="product_img">
                         <h2 class="product_name">Tostadora</h2>
                         <p class="product_description">110V - 650W | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="sandwich_maker">
-                        <img src="media/images/products/sandwhichera1.png" alt="" class="product_img">
+                        <img src="media/images/products/sandwhichera1.png" alt="Sandwichera" class="product_img">
                         <h2 class="product_name">Sandwichera</h2>
                         <p class="product_description">110V - 850W | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -238,7 +238,7 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="teapot">
-                        <img src="media/images/products/tetera1.png" alt="" class="product_img">
+                        <img src="media/images/products/tetera1.png" alt="Tetera eléctrica" class="product_img">
                         <h2 class="product_name">Tetera electrica</h2>
                         <p class="product_description">110V - 2L | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -250,7 +250,7 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_individual_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_individual_negro.png" alt="Estufa un quemador" class="product_img">
                         <h2 class="product_name">Estufa un quemador</h2>
                         <p class="product_description">110V - 1000W | NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -262,7 +262,7 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_doble_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_doble_negro.png" alt="Estufa dos quemadores" class="product_img">
                         <h2 class="product_name">Estufa dos quemadores</h2>
                         <p class="product_description">110V - 2000W | NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -274,19 +274,19 @@
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="air_fryer">
-                        <img src="media/images/products/airfryer.png" alt="" class="product_img">
+                        <img src="media/images/products/airfryer.png" alt="Air fryer" class="product_img">
                         <h2 class="product_name">Air fryer</h2>
                         <p class="product_description">NEGRO | 110V - 4,5L</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera2_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/cafetera2_negro.png" alt="Cafetera" class="product_img">
                         <h2 class="product_name">Cafetera</h2>
                         <p class="product_description">NEGRO | 110V - 1,2L</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera3_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/cafetera3_negro.png" alt="Cafetera" class="product_img">
                         <h2 class="product_name">Cafetera</h2>
                         <p class="product_description">NEGRO | 110V - 6 TAZAS</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
@@ -600,7 +600,7 @@
             </form>
             <a href="https://wa.me/+50769838322" class="contact_text_container">
                 <p class="contact_text">Envianos un WhatsApp</p>
-                <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="" class="contact_icon">
+                <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="contact_icon">
             </a>
         </section>
     </main>
@@ -608,7 +608,7 @@
     <footer class="footer">
         <div class="footer_item">
             <a href="index.html" class="footer_logo_container">
-                <img src="media/icons/logo/logo.png" alt="" class="footer_logo_icon">
+            <img src="media/icons/logo/logo.png" alt="Home Power Logo" class="footer_logo_icon">
             </a>
             <a href="https://www.instagram.com/homepowerpty/" class="instagram_container">
                 <img src="media/icons/socials_networks/instagram_icon.png" alt="" class="instagram_icon">
