Aumentan el tamaño de los logos Eliminan los puntos negros Mejoran la velocidad y suavidad del desplazamiento Añaden efecto hover a los logos Mantienen el scroll infinito Agregan controles de flecha para navegación manual Pausan la animación al pasar el mouse

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <li class="product" data-category="iron">
                 <div class="product_badge hot">Más Vendido</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/PLANCHA SECO 2_..png" 
+                    <img src="media/images/products/PLANCHA SECO 2_.png" 
                          data-box="media/images/products/PLANCHA SECO CAJA.png" 
                          alt="Plancha Seco" class="product_img" loading="lazy">
                 </div>
@@ -252,7 +252,7 @@
             <li class="product" data-category="iron">
                 <div class="product_badge premium">Premium</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/PLANCHA VAPOR 2_..png" 
+                    <img src="media/images/products/PLANCHA VAPOR 2_.png" 
                          data-box="media/images/products/PLANCHA VAPOR CAJA.png" 
                          alt="Plancha Vapor Premium" class="product_img" loading="lazy">
                 </div>
@@ -487,8 +487,8 @@
             <li class="product" data-category="stove">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/ESTUFA ELECTRICA 2 BLANCA.png" 
-                         data-box="media/images/products/ESTUFA ELECTRICA 2 BLANCA CAJA.png" 
-                         alt="Estufa Eléctrica 2 Quemadores" class="product_img" loading="lazy">
+                        data-box="media/images/products/ESTUFA ELECTRICA 2 BLANCA CAJA.png" 
+                        alt="Estufa Eléctrica 2 Quemadores" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008918</span>
@@ -502,7 +502,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Estufa Eléctrica COD: 732129008918" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -512,8 +512,8 @@
             <li class="product" data-category="stove">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/ESTUFA ELECTRICA 2 NEGRA.png" 
-                         data-box="media/images/products/ESTUFA ELECTRICA 2 NEGRA CAJA.png" 
-                         alt="Estufa Eléctrica 2 Negra" class="product_img" loading="lazy">
+                        data-box="media/images/products/ESTUFA ELECTRICA 2 NEGRA CAJA.png" 
+                        alt="Estufa Eléctrica 2 Negra" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008925</span>
@@ -527,7 +527,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Estufa Eléctrica Negra COD: 732129008925" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -537,8 +537,8 @@
             <li class="product" data-category="stove">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/ESTUFA ELECTRICA DOBLE BLANCA.png" 
-                         data-box="media/images/products/ESTUFA ELECTRICA DOBLE BLANCA CAJA.png" 
-                         alt="Estufa Eléctrica Doble" class="product_img" loading="lazy">
+                        data-box="media/images/products/ESTUFA ELECTRICA DOBLE BLANCA CAJA.png" 
+                        alt="Estufa Eléctrica Doble" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008901</span>
@@ -552,7 +552,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Estufa Doble COD: 732129008901" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -562,9 +562,9 @@
             <li class="product" data-category="stove">
                 <div class="product_badge new">Nuevo</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/ESTUFA GAS TRES.png" 
-                         data-box="media/images/products/ESTUFA GAS TRES CAJA.png" 
-                         alt="Estufa a Gas 3 Quemadores" class="product_img" loading="lazy">
+                    <img src="media/images/products/ESTUFA GAS TRES_.png" 
+                        data-box="media/images/products/ESTUFA GAS TRES CAJA.png" 
+                        alt="Estufa a Gas 3 Quemadores" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008437</span>
@@ -578,7 +578,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Estufa a Gas COD: 732129008437" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -588,8 +588,8 @@
             <li class="product" data-category="stove">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/ESTUFA GAS DOS.png" 
-                         data-box="media/images/products/ESTUFA GAS DOS.png" 
-                         alt="Estufa a Gas 2 Quemadores" class="product_img" loading="lazy">
+                        data-box="media/images/products/ESTUFA GAS DOS.png" 
+                        alt="Estufa a Gas 2 Quemadores" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008438</span>
@@ -603,7 +603,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Estufa a Gas 2 Quemadores COD: 732129008438" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -613,9 +613,9 @@
             <!-- FREIDORAS DE AIRE -->
             <li class="product" data-category="air_fryer">
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/FREIDORA DE AIRE BLANCA #1.png" 
-                         data-box="media/images/products/FREIDORA DE AIRE BLANCA #1 CAJA.png" 
-                         alt="Freidora de Aire Blanca" class="product_img" loading="lazy">
+                    <img src="media/images/products/FRIEDORA DE AIRE BLANCA 1.png"
+                        data-box="media/images/products/FREIDORA DE AIRE BLANCA 1 CAJA.png" 
+                        alt="Freidora de Aire Blanca" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008413</span>
@@ -629,7 +629,7 @@
                     <div class="product_actions">
                         <span class="stock_status in_stock">✓ Disponible</span>
                         <a href="https://wa.me/50769838322?text=Hola, me interesa la Freidora de Aire Blanca COD: 732129008413" 
-                           class="product_cta" target="_blank">
+                        class="product_cta" target="_blank">
                             Consultar Precio
                         </a>
                     </div>
@@ -638,9 +638,9 @@
 
             <li class="product" data-category="air_fryer">
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/FREIDORA DE AIRE NEGRA #2.png" 
-                         data-box="media/images/products/FREIDORA DE AIRE NEGRA #2 CAJA.png" 
-                         alt="Freidora de Aire Negra" class="product_img" loading="lazy">
+                    <img src="/media/images/products/FREIDORA DE AIRE NEGRA 2.png" 
+                        data-box="/media/images/products/FREIDORA DE AIRE NEGRA 2 CAJA.png" 
+                        alt="Freidora de Aire Negra" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
                     <span class="product_sku">COD: 732129008414</span>
@@ -692,7 +692,7 @@
             <li class="product" data-category="teapot">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/TETERA ELECTRICA.png" 
-                         data-box="media/images/products/TETERA ELECTRICA CAJA.png" 
+                         data-box="media/images/products/TETERA ELECTRICA CAJA_.png" 
                          alt="Tetera Eléctrica" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -846,7 +846,7 @@
             <li class="product" data-category="pressure_cooker">
                 <div class="product_badge hot">Más Vendido</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/OLLA.png" 
+                    <img src="media/images/products/OLLA PRESION.png" 
                          data-box="media/images/products/OLLA PRESION CAJA.png" 
                          alt="Olla de Presión Premium" class="product_img" loading="lazy">
                 </div>
@@ -882,7 +882,7 @@
         <section class="section_clients" id="clientes">
             <h2 class="section_clients_title">Nuestros Clientes</h2>
             <div class="clients_slider_container">
-                <ul class="clients_slider" id="clients_slider">
+                <ul class="clients_slider" id="clients_slider" style="list-style: none; margin: 0; padding: 0;">
                     <li class="client">
                         <img src="media/icons/clients/almacen_el_lobo_logo.png" alt="Almacén El Lobo" class="client_logo">
                     </li>
