encuadre de banner y texto en section hero

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <main class="main">
         <section class="section_banner" id="inicio">
             <div class="banner_content">
-                <h1 class="title">Potencia e Innovación en Electrodomésticos</h1>
+                <h1 class="title">Potencia e Innovación para tu hogar</h1>
                 <h2 class="sub_title">Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.</h2>
                 <a href="https://wa.me/+50769838322" class="cta">
                     <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="cta_icon">
@@ -1454,12 +1454,7 @@
                     </div>
                 </div>
                 <div class="popup-actions">
-                    <a href="https://wa.me/50769838322?text=¡Hola! Me interesa la promoción de Black Week 2024. ¿Podrían darme más detalles?" 
-                       class="popup-cta-primary" target="_blank">
-                        <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="cta-icon">
-                        ¡QUIERO MI DESCUENTO!
-                    </a>
-                    <button class="popup-cta-secondary" id="remindLater">Recordar más tarde</button>
+                    <button class="popup-cta-close" onclick="BlackWeekPopup.hide()">Cerrar</button>
                 </div>
             </div>
         </div>
