ultimo git add, antes de entragar proyecto terminado

--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@
             <!-- Logo y descripción -->
             <div class="footer_section footer_brand">
                 <div class="footer_logo_container">
-                    <img src="media/icons/logo/logo.png" alt="Home Power Logo" class="footer_logo"> 
+                    <img src="media/icons/logo/HomePower_Footer.png" alt="Home Power Logo" class="footer_logo"> 
                 </div>
                 <h3 class="footer_brand_name">Home Power</h3>
                 <p class="footer_description">
