--- a/index.html
+++ b/index.html
@@ -1528,4 +1528,4 @@
     <script src="scripts/black_week_popup.js" defer></script>
     <script src="scripts/cv_button_handler.js" defer></script>
 </body>
-</html>
+</html>"<!-- Git Deploy Test: Mon 09/29/2025 10:41:00.22 -->" 
