actualizacion de send_Form

--- a/index.html
+++ b/index.html
@@ -1524,22 +1524,17 @@
         <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="whatsapp_float_icon">
     </a>
 
-    <!-- Scripts críticos (cargar inmediatamente) -->
+    <!-- Scripts críticos -->
     <script src="scripts/header.js"></script>
     
-    <!-- Scripts no críticos (defer para mejor rendimiento) -->
-    <script src="scripts/inputs.js" defer></script>
+    <!-- Scripts no críticos -->
     <script src="scripts/clients_slider.js" defer></script>
     <script src="scripts/filter_products.js" defer></script>
-    <!-- DEBUG: Script temporal para carreras -->
-    <script src="scripts/debug_careers_form.js" defer></script>
-    <!-- ORIGINAL: send_both_forms.js deshabilitado temporalmente -->
-    <!-- <script src="scripts/send_both_forms.js" defer></script> -->
-    <script src="scripts/file_upload.js" defer></script>
-    <script src="scripts/send_careers_form.js" defer></script>
     <script src="scripts/product-interactions.js" defer></script>
     <script src="scripts/avatar_effects.js" defer></script>
     <script src="scripts/black_week_popup.js" defer></script>
-    <script src="scripts/cv_button_handler.js" defer></script>
+    
+    <!-- SCRIPT UNIFICADO - Sin conflictos -->
+    <script src="scripts/unified_forms.js" defer></script>
 </body>
 </html>"<!-- Git Deploy Test: Mon 09/29/2025 10:41:00.22 -->"
