actualizacion de index.html

--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
             </div>
             
             <a href="#carreras" class="career_cta_button form_submit">
-                📋 LLENAR FORMULARIO DE APLICACIÓN
+                LLENAR FORMULARIO DE APLICACIÓN
             </a>
         </div>
     </section>
