--- a/index.html
+++ b/index.html
@@ -123,180 +123,70 @@
 
     <main class="main">
         <section class="section_banner">
-            <h1 class="title">Potencia e Innovación en Electrodomésticos</h1>
-            <h2 class="sub_title">Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.</h2>
-            <a href="https://wa.me/+50769838322" class="cta">
-                <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="" class="cta_icon">
-                <span class="cta_text">Consigue tu cotización ahora</span>
-            </a>
-            <img src="media/images/banner/banner_img.png" alt="" class="banner_img">
+            <div class="main">
+                <div class="hero_content">
+                    <h1 class="hero_title">Potencia e Innovación para tu hogar</h1>
+                    <p class="hero_subtitle">Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.</p>
+                </div>
+            </div>
         </section>
 
         <section class="section_products" id="productos">
             <header class="section_products_header">
+                <h2>Catálogo de Electrodomésticos</h2>
+                <p>Stock exclusivo con garantía de 1 año • Precios especiales para mayoristas</p>
+                
+                <!-- FILTROS DE PRODUCTOS -->
                 <ul class="products_categories">
+                    <li class="product_category active" data-category="all">Todos</li>
                     <li class="product_category" data-category="iron">Planchas</li>
                     <li class="product_category" data-category="blender">Licuadoras</li>
-                    <li class="product_category" data-category="toaster">Tostadoras</li>
-                    <li class="product_category" data-category="sandwich_maker">Sandwicheras</li>
+                    <li class="product_category" data-category="air_fryer">Air Fryer</li>
                     <li class="product_category" data-category="teapot">Teteras</li>
+                    <li class="product_category" data-category="toaster">Tostadoras</li>
                     <li class="product_category" data-category="stove">Estufas</li>
-                    <li class="product_category" data-category="air_fryer">Air fryer</li>
-                    <li class="product_category" data-category="coffe_pot">Cafetera</li>
+                    <li class="product_category" data-category="coffee_maker">Cafeteras</li>
+                    <li class="product_category" data-category="sandwich_maker">Sandwicheras</li>
+                    <li class="product_category" data-category="rice_cooker">Arroceras</li>
+                    <li class="product_category" data-category="pressure_cooker">Ollas de Presión</li>
+                    <li class="product_category" data-category="oven">Hornitos</li>
                 </ul>
             </header>
+
             <article class="products_container">
                 <ul class="products">
+                    <!-- EJEMPLO DE PRODUCTO CON BADGE -->
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha1.png" alt="" class="product_img">
-                        <h2 class="product_name">Plancha a vapor</h2>
-                        <p class="product_description">110V - 1200W | BLANCO/AZUL</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
+                        <div class="product_badge hot">Más Vendido</div>
+                        <div class="product_image_wrapper">
+                            <img src="media/images/products/PLANCHA SECO 2_.png" 
+                                 data-box="media/images/products/PLANCHA SECO CAJA.png" 
+                                 alt="Plancha Seco" 
+                                 class="product_img" 
+                                 loading="lazy">
+                        </div>
+                        <div class="product_content">
+                            <span class="product_sku">COD: 6975069402017</span>
+                            <h3 class="product_name">Plancha en Seco</h3>
+                            <ul class="product_features">
+                                <li>✓ Potencia: 1000W</li>
+                                <li>✓ Voltaje: 110V</li>
+                                <li>✓ Base cerámica</li>
+                                <li>✓ Control de temperatura</li>
+                            </ul>
+                            <div class="product_actions">
+                                <span class="stock_status in_stock">✓ Disponible</span>
+                                <a href="https://wa.me/50769838322?text=Hola, me interesa la Plancha en Seco COD: 6975069402017" 
+                                   class="product_cta" 
+                                   target="_blank" 
+                                   rel="noopener">
+                                    Consultar Precio
+                                </a>
+                            </div>
+                        </div>
                     </li>
-                    <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha2.png" alt="" class="product_img">
-                        <h2 class="product_name">Plancha a vapor</h2>
-                        <p class="product_description">1400W - 170ML | BLANCO/AZUL</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha3.png" alt="" class="product_img">
-                        <h2 class="product_name">Plancha en seco</h2>
-                        <p class="product_description">110V - 1200W | BLANCO/MORADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha4.png" alt="" class="product_img">
-                        <h2 class="product_name">Plancha en seco</h2>
-                        <p class="product_description">110V - 1200W | BLANCO/AZUL</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora</h2>
-                        <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L NEGRO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_blanco.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora</h2>
-                        <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L BLANCO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L NEGRO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_verde.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L VERDE</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_blanco.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L BLANCO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_rojo.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L ROJO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora2_plastico_verde.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA PLASTICA | 110V - 1,5L | VERDE</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora2_plastico_marron.png" alt="" class="product_img">
-                        <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
-                        <p class="product_description">JARRA PLASTICA | 110V - 1,5L | MARRÓN</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="toaster">
-                        <img src="media/images/products/tostadora.png" alt="" class="product_img">
-                        <h2 class="product_name">Tostadora</h2>
-                        <p class="product_description">110V - 650W | NEGRO/PLATEADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="sandwich_maker">
-                        <img src="media/images/products/sandwhichera1.png" alt="" class="product_img">
-                        <h2 class="product_name">Sandwichera</h2>
-                        <p class="product_description">110V - 850W | NEGRO/PLATEADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="sandwich_maker">
-                        <img src="media/images/products/snadwichera2.png" alt="" class="product_img">
-                        <h2 class="product_name">Sandwichera</h2>
-                        <p class="product_description">110V - 850W | NEGRO/PLATEADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="teapot">
-                        <img src="media/images/products/tetera1.png" alt="" class="product_img">
-                        <h2 class="product_name">Tetera electrica</h2>
-                        <p class="product_description">110V - 2L | NEGRO/PLATEADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="teapot">
-                        <img src="media/images/products/tetera2.png" alt="" class="product_img">
-                        <h2 class="product_name">Tetera electrica</h2>
-                        <p class="product_description">110V - 2,3L | NEGRO/PLATEADO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_individual_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Estufa un quemador</h2>
-                        <p class="product_description">110V - 1000W | NEGRO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_individual_blanco.png" alt="" class="product_img">
-                        <h2 class="product_name">Estufa un quemador</h2>
-                        <p class="product_description">110V - 1000W | BLANCO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_doble_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Estufa dos quemadores</h2>
-                        <p class="product_description">110V - 2000W | NEGRO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_doble_blanco.png" alt="" class="product_img">
-                        <h2 class="product_name">Estufa dos quemadores</h2>
-                        <p class="product_description">110V - 2000W | BLANCO</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="air_fryer">
-                        <img src="media/images/products/airfryer.png" alt="" class="product_img">
-                        <h2 class="product_name">Air fryer</h2>
-                        <p class="product_description">NEGRO | 110V - 4,5L</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera2_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Cafetera</h2>
-                        <p class="product_description">NEGRO | 110V - 1,2L</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera3_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Cafetera</h2>
-                        <p class="product_description">NEGRO | 110V - 6 TAZAS</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
-                    <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera1_negro.png" alt="" class="product_img">
-                        <h2 class="product_name">Cafetera</h2>
-                        <p class="product_description">NEGRO | 110V - 6 TAZAS</p>
-                        <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
-                    </li>
+                    
+                    <!-- Más productos... -->
                 </ul>
             </article>
         </section>
